--- a/JobCandidateHubAPI/appsettings.json
+++ b/JobCandidateHubAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=admin;password=admin;database=job_candidate;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
